[package]
name = "shader-sandbox"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "^0.3.0"
clap = "^2.23.3"
fps_counter = "^0.2.0"
glium = { version = "^0.14.0", features = [], default-features = false }
midgar = { git = "https://github.com/mystal/midgar-engine" }
notify = "^4.0.1"
same-file = "^0.1.3"
